--- a/index.html
+++ b/index.html
@@ -18,15 +18,11 @@
     <p class="lead">A simple calendar app for scheduling your work day</p>
     <p id="currentDay" class="lead"></p>
   </header>
-  <div class="container">
-    <!-- use class for "past", "present", and "future" to apply styles
-        to the time-block divs accordingly. (you'll need to do this in your
-        JavaScript code. Don't forget to delete this comment when you are done.
-        The classes are used as examples below and should be removed from the html
-        in the finished product.) -->
 
-    <!-- example of a past time block -->
-    <div id="hour-9" class="row time-block past ">
+
+  <div class="container">
+    
+    <div id="hour-9" class="row time-block">
       <div class="col-md-1 hour">
         9AM
       </div>
@@ -35,8 +31,7 @@
       <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
     </div>
 
-    <!-- example of a present time block -->
-    <div id="hour-10" class="row time-block present">
+    <div id="hour-10" class="row time-block">
       <div class="col-md-1 hour">
         10AM
       </div>
@@ -45,8 +40,7 @@
       <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
     </div>
 
-    <!-- example of a future time block -->
-    <div id="hour-11" class="row time-block future">
+    <div id="hour-11" class="row time-block">
       <div class="col-md-1 hour">
         11AM
       </div>
@@ -107,8 +101,10 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 
-    <!-- link your javascript files here. (Must be after jquery is linked!
-      You should be able to explain why that is to be "employer ready".) -->
+
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./script.js"></script>
 
 </body>
 
